@@ -4,6 +4,10 @@ Note: This is a more complete ChangeLog than the one in Appendix A of the
 manual, which only contains summaries of changes.
 -----------------------------------------------------------------------------
 
+2010-08-30
+   For release with PHPlot-5.1.3:
+   * Change vague references to release "after 5.1.2" to "5.1.3".
+
 2010-08-27
    Update with changes for new TrueType font default and handling.
    * concepts.xml: Rewrite "TrueType Font Selection" section, correct and
